# aoce-advent-plugin

./: Cargo.toml  pyproject.toml  watch.sh
src/: lib.rs
