[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "aoce_advent_plugin"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.entry-points."adventofcode.examples"]
aoce_advent_plugin = "aoce_advent_plugin:advent_example_parser"

[tool.maturin]
features = ["pyo3/extension-module"]
